# bleaws

cmake/: prelude.cmake
example/simpleble/: CMakeLists.txt
example/simpleble/cpp/connect/: connect.cpp
example/simplebluez/: CMakeLists.txt
example/simplebluez/scan/: scan.cpp
simpledbus/: CMakeLists.txt
